added routes to serve  css and image files add

--- a/public/views/cards.html
+++ b/public/views/cards.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Cards</title>
-<link rel="stylesheet"  href="cards.css">
+    <link rel="stylesheet" type="text/css" href="../css/cards.css">
 </head>
-    <body>
-        <div class ='main'>
+
+<body>
+    <div class='main'>
         <!--cards -->
         <div class='cards'>
             <div class='image'>
-                <img src="pepsi.png">
+                <img src="../images/pepsi.jpg">
             </div>
             <div class='title'>
                 <h1>Title</h1>
@@ -17,13 +19,13 @@
             <div class="des">
                 <p>Title Description</p>
                 <form id='1' method="POST" action="/item/confirmation/pepsi">
-                <button >Buy</button>
+                    <button>Buy</button>{{amount}}
                 </form>
             </div>
         </div>
         <div class='cards'>
             <div class='image'>
-                <img src="sprite.jpg">
+                <img src="../images/sprite.jpg">
             </div>
             <div class='title'>
                 <h1>Title</h1>
@@ -31,13 +33,13 @@
             <div class="des">
                 <p>Title Description</p>
                 <form id='2' method="POST" action="/item/confirmation/sprite">
-                <button>Buy</button>
+                    <button>Buy</button>
                 </form>
             </div>
         </div>
         <div class='cards'>
             <div class='image'>
-                <img src="lays.jpg">
+                <img src="../images/lays.jpg">
             </div>
             <div class='title'>
                 <h1>Title</h1>
@@ -45,13 +47,13 @@
             <div class="des">
                 <p>Title Description</p>
                 <form id='3' method="POST" action="/item/confirmation/lays">
-                <button>Buy</button>
-                </form> 
+                    <button>Buy</button>
+                </form>
             </div>
         </div>
         <div class='cards'>
             <div class='image'>
-                <img src="kurkure.jpg">
+                <img src="../images/kurkure.jpg">
             </div>
             <div class='title'>
                 <h1>Title</h1>
@@ -59,13 +61,13 @@
             <div class="des">
                 <p>Title Description</p>
                 <form id='4' method="POST" action="/item/confirmation/kurkure">
-                <button>Buy</button>
-                </form> 
+                    <button>Buy</button>
+                </form>
             </div>
         </div>
         <div class='cards'>
             <div class='image'>
-                <img src="dairymilk.jpg">
+                <img src="../images/dairymilk.jpg">
             </div>
             <div class='title'>
                 <h1>Title</h1>
@@ -73,11 +75,11 @@
             <div class="des">
                 <p>Title Description</p>
                 <form id='5' method="POST" action="item/confirmation/dairymilk">
-                <button>Buy</button>
-                </form> 
+                    <button>Buy</button>
+                </form>
             </div>
         </div>
     </div>
-    </body>
-    
+</body>
+
 </html>
