--- a/public/views/cards.html
+++ b/public/views/cards.html
@@ -11,15 +11,15 @@
         <!--cards -->
         <div class='cards'>
             <div class='image'>
-                <img src="../images/pepsi.jpg">
+                <img src="../images/7-pepsi.png">
             </div>
             <div class='title'>
-                <h1>Title</h1>
+                <h1>Pepsi</h1>
             </div>
             <div class="des">
-                <p>Title Description</p>
-                <form id='1' method="POST" action="/item/confirmation/pepsi">
-                    <button>Buy</button>{{amount}}
+                <p>Qty-1 Rs.20</p>
+                <form id='1' method="POST" action="/item/confirmation/{{amount}}/pepsi">
+                    <button>Buy</button>
                 </form>
             </div>
         </div>
@@ -28,11 +28,11 @@
                 <img src="../images/sprite.jpg">
             </div>
             <div class='title'>
-                <h1>Title</h1>
+                <h1>Sprite</h1>
             </div>
             <div class="des">
-                <p>Title Description</p>
-                <form id='2' method="POST" action="/item/confirmation/sprite">
+                <p>Qty-1 Rs.20</p>
+                <form id='2' method="POST" action="/item/confirmation/{{amount}}/sprite">
                     <button>Buy</button>
                 </form>
             </div>
@@ -42,11 +42,11 @@
                 <img src="../images/lays.jpg">
             </div>
             <div class='title'>
-                <h1>Title</h1>
+                <h1>Lays</h1>
             </div>
             <div class="des">
-                <p>Title Description</p>
-                <form id='3' method="POST" action="/item/confirmation/lays">
+                <p>Qty-1 Rs.10</p>
+                <form id='3' method="POST" action="/item/confirmation/{{amount}}/lays">
                     <button>Buy</button>
                 </form>
             </div>
@@ -56,11 +56,11 @@
                 <img src="../images/kurkure.jpg">
             </div>
             <div class='title'>
-                <h1>Title</h1>
+                <h1>Kurkure</h1>
             </div>
             <div class="des">
-                <p>Title Description</p>
-                <form id='4' method="POST" action="/item/confirmation/kurkure">
+                <p>Qty-1 Rs.10</p>
+                <form id='4' method="POST" action="/item/confirmation/{{amount}}/kurkure">
                     <button>Buy</button>
                 </form>
             </div>
@@ -70,11 +70,11 @@
                 <img src="../images/dairymilk.jpg">
             </div>
             <div class='title'>
-                <h1>Title</h1>
+                <h1>Dairy Milk</h1>
             </div>
             <div class="des">
-                <p>Title Description</p>
-                <form id='5' method="POST" action="item/confirmation/dairymilk">
+                <p>Qty-1 Rs.10</p>
+                <form id='5' method="POST" action="item/confirmation/{{amount}}/dairymilk">
                     <button>Buy</button>
                 </form>
             </div>
