image resizing in the cards yet to be done, all the functionalities are working

--- a/public/views/cards.html
+++ b/public/views/cards.html
@@ -11,7 +11,7 @@
         <!--cards -->
         <div class='cards'>
             <div class='image'>
-                <img src="../images/7-pepsi.png">
+                <img src="../images/pepsi.jpg">
             </div>
             <div class='title'>
                 <h1>Pepsi</h1>
